--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
 
-  <h2>DevelopGAN Interactive Dashboard</h2>
+  <h2>Blood Glucose Time-series Interactive Dashboard</h2>
   <p style="text-align:center; font-size:0.95em; font-weight:normal; font-style:italic; color:#666; margin-top:-0.5em;">
     Blood glucose profiles comparison with synched inputs below. Zoom and pan to select your time range.
   </p>
@@ -231,4 +231,7 @@
   </script>
 
 </body>
+<footer id="observablehq-footer" style="font-size:0.5em; padding:0.5em 0;">
+  <div>© 2025 Oriol Bustos · <a href="https://github.com/oriolbustos/timeseries-bg-viz" target="_blank" rel="noopener noreferrer" style="color:#888;">GitHub</a></div>
+</footer>
 </html>
